--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 aniso8601==3.0.2
+bcrypt==3.1.4
+cffi==1.11.5
 click==6.7
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
 Flask-RESTful==0.3.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pycparser==2.18
 pytz==2018.5
 six==1.11.0
 Werkzeug==0.14.1
