--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.0.2
 Flask-Bcrypt==0.7.1
 Flask-RESTful==0.3.6
 Flask-Script==2.0.6
+Flask-Testing==0.7.1
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
