--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==9.0.1
 click==8.1.3
 Flask==2.3.2
 Flask-RESTful==0.3.10
+Flask-Cors==3.0.10
 Flask-Script==2.0.6
 Flask-Testing==0.7.1
 gunicorn==20.1.0
@@ -12,3 +13,4 @@ pycparser==2.18
 pytz==2023.3
 six==1.16.0
 Werkzeug==2.3.4
+python-dotenv==1.0.0
